[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.27.0",features = ["full"]}
serde = {version="1.0.152",features = ["derive"]}
serde_json = "1.0.95"
prettytable-rs = "0.10.0"
log4rs = "1.2.0"
log = "0.4.17"
